src/libbulletc/src/btSoftBody_wrap.h



	EXPORT btSoftBody_sCti* btSoftBody_sCti_new();

	EXPORT btCollisionObject* btSoftBody_sCti_getColObj(btSoftBody_sCti* obj);

	EXPORT void btSoftBody_sCti_getNormal(btSoftBody_sCti* obj);

	EXPORT btScalar btSoftBody_sCti_getOffset(btSoftBody_sCti* obj);

	EXPORT void btSoftBody_sCti_setColObj(btSoftBody_sCti* obj, btCollisionObject* value);

	//EXPORT void btSoftBody_sCti_setNormal(btSoftBody_sCti* obj, void value);
	EXPORT void btSoftBody_sCti_setOffset(btSoftBody_sCti* obj, btScalar value);

	EXPORT void btSoftBody_sCti_delete(btSoftBody_sCti* obj);


	EXPORT btSoftBody_sMedium* btSoftBody_sMedium_new();

	EXPORT btScalar btSoftBody_sMedium_getDensity(btSoftBody_sMedium* obj);

	EXPORT btScalar btSoftBody_sMedium_getPressure(btSoftBody_sMedium* obj);

	EXPORT void btSoftBody_sMedium_getVelocity(btSoftBody_sMedium* obj);

	EXPORT void btSoftBody_sMedium_setDensity(btSoftBody_sMedium* obj, btScalar value);

	EXPORT void btSoftBody_sMedium_setPressure(btSoftBody_sMedium* obj, btScalar value);

	//EXPORT void btSoftBody_sMedium_setVelocity(btSoftBody_sMedium* obj, void value);
	EXPORT void btSoftBody_sMedium_delete(btSoftBody_sMedium* obj);


	EXPORT btSoftBody_Element* btSoftBody_Element_new();

	EXPORT void* btSoftBody_Element_getTag(btSoftBody_Element* obj);

	EXPORT void btSoftBody_Element_setTag(btSoftBody_Element* obj, void* value);

	EXPORT void btSoftBody_Element_delete(btSoftBody_Element* obj);


	EXPORT btSoftBody_Material* btSoftBody_Material_new();

	EXPORT int btSoftBody_Material_getFlags(btSoftBody_Material* obj);

	EXPORT btScalar btSoftBody_Material_getKAST(btSoftBody_Material* obj);

	EXPORT btScalar btSoftBody_Material_getKLST(btSoftBody_Material* obj);

	EXPORT btScalar btSoftBody_Material_getKVST(btSoftBody_Material* obj);

	EXPORT void btSoftBody_Material_setFlags(btSoftBody_Material* obj, int value);

	EXPORT void btSoftBody_Material_setKAST(btSoftBody_Material* obj, btScalar value);

	EXPORT void btSoftBody_Material_setKLST(btSoftBody_Material* obj, btScalar value);

	EXPORT void btSoftBody_Material_setKVST(btSoftBody_Material* obj, btScalar value);


	EXPORT btSoftBody_Feature* btSoftBody_Feature_new();

	EXPORT btSoftBody_Material* btSoftBody_Feature_getMaterial(btSoftBody_Feature* obj);

	EXPORT void btSoftBody_Feature_setMaterial(btSoftBody_Feature* obj, btSoftBody_Material* value);


	EXPORT btSoftBody_Node* btSoftBody_Node_new();

	EXPORT btScalar btSoftBody_Node_getArea(btSoftBody_Node* obj);

	EXPORT int btSoftBody_Node_getBattach(btSoftBody_Node* obj);

	EXPORT void btSoftBody_Node_getF(btSoftBody_Node* obj);

	EXPORT btScalar btSoftBody_Node_getIm(btSoftBody_Node* obj);

	EXPORT btDbvtNode* btSoftBody_Node_getLeaf(btSoftBody_Node* obj);

	EXPORT void btSoftBody_Node_getN(btSoftBody_Node* obj);

	EXPORT void btSoftBody_Node_getQ(btSoftBody_Node* obj);

	EXPORT void btSoftBody_Node_getV(btSoftBody_Node* obj);

	EXPORT void btSoftBody_Node_getX(btSoftBody_Node* obj);

	EXPORT void btSoftBody_Node_setArea(btSoftBody_Node* obj, btScalar value);

	EXPORT void btSoftBody_Node_setBattach(btSoftBody_Node* obj, int value);

	//EXPORT void btSoftBody_Node_setF(btSoftBody_Node* obj, void value);
	EXPORT void btSoftBody_Node_setIm(btSoftBody_Node* obj, btScalar value);

	EXPORT void btSoftBody_Node_setLeaf(btSoftBody_Node* obj, btDbvtNode* value);