src/BulletSharpPInvoke/SoftBody/SoftBody.cs


		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_sCti_new();
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_sCti_getColObj(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_sCti_getNormal(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btSoftBody_sCti_getOffset(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_sCti_setColObj(IntPtr obj, IntPtr value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_sCti_setNormal(IntPtr obj, Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_sCti_setOffset(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_sCti_delete(IntPtr obj);
	}

	public class sMedium
	{
		internal IntPtr _native;

		internal sMedium(IntPtr native)
		{
			_native = native;
		}

		public sMedium()
		{
			_native = btSoftBody_sMedium_new();
		}

		public float Density
		{
			get { return btSoftBody_sMedium_getDensity(_native); }
			set { btSoftBody_sMedium_setDensity(_native, value); }
		}

		public float Pressure
		{
			get { return btSoftBody_sMedium_getPressure(_native); }
			set { btSoftBody_sMedium_setPressure(_native, value); }
		}
        /*
		public void Velocity
		{
			get { return btSoftBody_sMedium_getVelocity(_native); }
			set { btSoftBody_sMedium_setVelocity(_native, value._native); }
		}
        */
		public void Dispose()
		{
			Dispose(true);
			GC.SuppressFinalize(this);
		}

		protected virtual void Dispose(bool disposing)
		{
			if (_native != IntPtr.Zero)
			{
				btSoftBody_sMedium_delete(_native);
				_native = IntPtr.Zero;
			}
		}

		~sMedium()
		{
			Dispose(false);
		}

		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_sMedium_new();
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btSoftBody_sMedium_getDensity(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btSoftBody_sMedium_getPressure(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_sMedium_getVelocity(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_sMedium_setDensity(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_sMedium_setPressure(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_sMedium_setVelocity(IntPtr obj, Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_sMedium_delete(IntPtr obj);
	}

	public class Element
	{
		internal IntPtr _native;

		internal Element(IntPtr native)
		{
			_native = native;
		}

		public Element()
		{
			_native = btSoftBody_Element_new();
		}

		public IntPtr Tag
		{
			get { return btSoftBody_Element_getTag(_native); }
			set { btSoftBody_Element_setTag(_native, value); }
		}

		public void Dispose()
		{
			Dispose(true);
			GC.SuppressFinalize(this);
		}

		protected virtual void Dispose(bool disposing)
		{
			if (_native != IntPtr.Zero)
			{
				btSoftBody_Element_delete(_native);
				_native = IntPtr.Zero;
			}
		}

		~Element()
		{
			Dispose(false);
		}

		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_Element_new();
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_Element_getTag(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Element_setTag(IntPtr obj, IntPtr value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Element_delete(IntPtr obj);
	}

	public class Material : Element
	{
		internal Material(IntPtr native)
			: base(native)
		{
		}

		public Material()
			: base(btSoftBody_Material_new())
		{
		}

		public int Flags
		{
			get { return btSoftBody_Material_getFlags(_native); }
			set { btSoftBody_Material_setFlags(_native, value); }
		}

		public float KAST
		{
			get { return btSoftBody_Material_getKAST(_native); }
			set { btSoftBody_Material_setKAST(_native, value); }
		}

		public float KLST
		{
			get { return btSoftBody_Material_getKLST(_native); }
			set { btSoftBody_Material_setKLST(_native, value); }
		}

		public float KVST
		{
			get { return btSoftBody_Material_getKVST(_native); }
			set { btSoftBody_Material_setKVST(_native, value); }
		}

		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_Material_new();
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern int btSoftBody_Material_getFlags(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btSoftBody_Material_getKAST(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btSoftBody_Material_getKLST(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btSoftBody_Material_getKVST(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Material_setFlags(IntPtr obj, int value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Material_setKAST(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Material_setKLST(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Material_setKVST(IntPtr obj, float value);
	}

	public class Feature : Element
	{
		internal Feature(IntPtr native)
			: base(native)
		{
		}

		public Feature()
			: base(btSoftBody_Feature_new())
		{
		}

		public Material Material
		{
			get { return new Material(btSoftBody_Feature_getMaterial(_native)); }
			set { btSoftBody_Feature_setMaterial(_native, value._native); }
		}

		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_Feature_new();
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_Feature_getMaterial(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Feature_setMaterial(IntPtr obj, IntPtr value);
	}

	public class Node : Feature
	{
		internal Node(IntPtr native)
			: base(native)
		{
		}

		public Node()
			: base(btSoftBody_Node_new())
		{
		}

		public float Area
		{
			get { return btSoftBody_Node_getArea(_native); }
			set { btSoftBody_Node_setArea(_native, value); }
		}

		public int Battach
		{
			get { return btSoftBody_Node_getBattach(_native); }
			set { btSoftBody_Node_setBattach(_native, value); }
		}
        /*
		public void F
		{
			get { return btSoftBody_Node_getF(_native); }
			set { btSoftBody_Node_setF(_native, value._native); }
		}
        */
		public float Im
		{
			get { return btSoftBody_Node_getIm(_native); }
			set { btSoftBody_Node_setIm(_native, value); }
		}
        /*
		public DbvtNode Leaf
		{
			get { return btSoftBody_Node_getLeaf(_native); }
			set { btSoftBody_Node_setLeaf(_native, value._native); }
		}

		public void N
		{
			get { return btSoftBody_Node_getN(_native); }
			set { btSoftBody_Node_setN(_native, value._native); }
		}

		public void Q
		{
			get { return btSoftBody_Node_getQ(_native); }
			set { btSoftBody_Node_setQ(_native, value._native); }
		}

		public void V
		{
			get { return btSoftBody_Node_getV(_native); }
			set { btSoftBody_Node_setV(_native, value._native); }
		}

		public void X
		{
			get { return btSoftBody_Node_getX(_native); }
			set { btSoftBody_Node_setX(_native, value._native); }
		}
        */
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_Node_new();
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btSoftBody_Node_getArea(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern int btSoftBody_Node_getBattach(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Node_getF(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern float btSoftBody_Node_getIm(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern IntPtr btSoftBody_Node_getLeaf(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Node_getN(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Node_getQ(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Node_getV(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Node_getX(IntPtr obj);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Node_setArea(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Node_setBattach(IntPtr obj, int value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Node_setF(IntPtr obj, Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Node_setIm(IntPtr obj, float value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Node_setLeaf(IntPtr obj, IntPtr value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Node_setN(IntPtr obj, Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Node_setQ(IntPtr obj, Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Node_setV(IntPtr obj, Vector3 value);
		[DllImport(Native.Dll, CallingConvention = Native.Conv), SuppressUnmanagedCodeSecurity]
		static extern void btSoftBody_Node_setX(IntPtr obj, Vector3 value);
	}

	public class Link : Feature
	{
		internal Link(IntPtr native)
			: base(native)
		{
		}
